@@ -3,13 +3,14 @@ NOCC 1.6  ?? ??, ??
   Patches
     * Patch #1915151 : NOCC breaks message threads on reply (Tobias Mathes).
     * Patch #1911516 : Add submenu to mail view (Tim Gerundt).
-    * Patch #1909759 : message body word wrap (Tobias Mathes).
+    * Patch #1909759 : Message body word wrap (Tobias Mathes).
     * Patch #1908364 : Move "Manage IMAP Folders" to main menu (Tim Gerundt).
     * Patch #1897338 : Add favicon (Tim Gerundt).
     * Patch #1896532 : New attachment icon (Tim Gerundt).
     * Patch #1894098 : Use <ul> for main menu (Tim Gerundt).
 
   Misc
+    * Disable incoming message wordwrapping (Arnaud Boudou). 
     * Update some theme images (Tim Gerundt).
     * Reorganize some files (Arnaud Boudou).
     * Add trash can feature on IMAP accounts (Arnaud Boudou).
